--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1440,12 +1440,12 @@ BEGIN
     CONTROL         "Check1",IDC_CHECKDELETE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,7,47,172,23
 END
 
-IDD_DIALOGVERSION DIALOGEX 0, 0, 309, 258
+IDD_DIALOGVERSION DIALOGEX 0, 0, 309, 274
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Version detector"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,252,237,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,252,253,50,14
     CONTROL         "SCI 0",IDC_RADIOSCI0,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,20,33,10
     CONTROL         "SCI 0+",IDC_RADIOSCI0_1,"Button",BS_AUTORADIOBUTTON,23,34,39,10
     CONTROL         "SCI 1.0",IDC_RADIOSCI1,"Button",BS_AUTORADIOBUTTON,23,48,40,10
@@ -1463,20 +1463,20 @@ BEGIN
     CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,139,40,10
     CONTROL         "SCI 2.0",IDC_RADIOSCI10,"Button",BS_AUTORADIOBUTTON,23,153,40,10
     GROUPBOX        "Resource package fmt",IDC_STATIC6,7,98,87,69,WS_GROUP
-    CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,188,53,8
-    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,214,69,10
-    CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,187,49,10
-    DEFPUSHBUTTON   "Reload game",IDOK,167,237,81,14
+    CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,204,53,8
+    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,230,69,10
+    CONTROL         "SCI1+ code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,203,54,10
+    DEFPUSHBUTTON   "Reload game",IDOK,167,253,81,14
     COMBOBOX        IDC_COMBO1,206,57,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "View format",IDC_STATIC4,161,60,39,8
     COMBOBOX        IDC_COMBO2,206,75,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Pic format",IDC_STATIC5,166,77,33,8
-    PUSHBUTTON      "View resource map",IDC_BUTTON1,7,237,87,14
-    CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,213,93,10
-    CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,200,91,10
-    PUSHBUTTON      "View message map",IDC_BUTTON2,7,216,87,14
-    CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,200,81,10
-    CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,226,68,10
+    PUSHBUTTON      "View resource map",IDC_BUTTON1,7,253,87,14
+    CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,229,93,10
+    CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,216,91,10
+    PUSHBUTTON      "View message map",IDC_BUTTON2,7,236,87,14
+    CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,216,81,10
+    CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,242,68,10
     CONTROL         "Supports messages",IDC_CHECK11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,174,78,10
     COMBOBOX        IDC_COMBO3,206,91,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Audio volume name",IDC_STATIC7,136,93,63,8
@@ -1492,6 +1492,8 @@ BEGIN
     RTEXT           "Message map source",IDC_STATIC13,133,157,68,8
     COMBOBOX        IDC_COMBO8,206,171,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Default resolution",IDC_STATIC14,142,173,58,8
+    COMBOBOX        IDC_COMBO9,206,187,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Kernel set",IDC_STATIC15,167,189,33,8
 END
 
 IDD_DIALOGCHOOSECOLORVGA DIALOGEX 0, 0, 152, 152
@@ -2488,7 +2490,7 @@ BEGIN
         VERTGUIDE, 110
         VERTGUIDE, 206
         TOPMARGIN, 7
-        BOTTOMMARGIN, 251
+        BOTTOMMARGIN, 267
     END
 
     IDD_DIALOGCHOOSECOLORVGA, DIALOG
@@ -2844,6 +2846,14 @@ BEGIN
 0x3436, 0x7830, 0x3034, 0x0030, 
     IDC_COMBO8, 0x403, 8, 0
 0x3436, 0x7830, 0x3834, 0x0030, 
+    IDC_COMBO9, 0x403, 9, 0
+0x7250, 0x766f, 0x6469, 0x6465, "\000" 
+    IDC_COMBO9, 0x403, 10, 0
+0x4353, 0x3049, 0x532f, 0x4943, 0x0031, 
+    IDC_COMBO9, 0x403, 5, 0
+0x4353, 0x3249, "\000" 
+    IDC_COMBO9, 0x403, 7, 0
+0x4353, 0x3249, 0x312e, "\000" 
     0
 END
 
