--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -2050,7 +2050,7 @@ BEGIN
     CONTROL         "y:",IDC_STATIC2,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,32,61,10,WS_EX_RIGHT
     EDITTEXT        IDC_EDITY,74,29,68,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Priority:",IDC_STATIC3,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,52,61,10,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITPRI,74,49,68,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDITPRI,74,49,68,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,7,66,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,74,66,68,14
     CONTROL         "x:",IDC_STATIC1,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,11,61,10,WS_EX_RIGHT
