- updates to template game, and rename of icon classes

--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -12,7 +12,7 @@ n032=DColorButton
 n984=RegionPath
 n011=DisposeCode
 n013=AboutCode
-n015=InvItem
+n015=Inventory
 n017=Smopper
 n018=SQEgo
 n020=DeathRoom
@@ -48,7 +48,7 @@ n932=PFollow
 n934=Slider
 n935=Scaler
 n936=BorderWindow
-n937=IconI
+n937=IconItem
 n938=ROsc
 n939=Osc
 n941=RandCycle
@@ -83,18 +83,16 @@ n991=Jump
 n992=Cycle
 n993=File
 n994=Game
-n995=InvI
+n995=InventoryItem
 n996=User
 n999=Obj
 n012=ColorInit
 n982=Helpers
 n958=DisposeLoad
 n926=Flip
-n101=rm101
 n014=DebugOut
 n010=DebugHandler
 n016=DebugRoomInit
-n980=Tutorial
 
 [Game]
 Name=New Game
@@ -125,6 +123,8 @@ n995=SettingsViews
 n2099=DeathButtons
 n2000=DeathView
 n999=MainCursor
+n001=ego_sv
+n002=ego_comp
 
 [Audio]
 
