--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -1694,22 +1694,20 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\TemplateGame\SCI1.1\src\Gauge.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Gauge.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\genetix.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\GlobalPalettes.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\GlobalPalettes.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\GravMover.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\gravmover.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Grooper.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Grooper.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Helpers.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Helpers.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\IconI.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\IconI.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\IconItem.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\IconItem.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Inset.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Inset.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\InvI.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\InvI.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\InvItem.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\InvItem.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Inventory.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Inventory.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\InventoryItem.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\InventoryItem.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Jump.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Jump.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\keystuff.sco" />
@@ -1833,8 +1831,6 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\TemplateGame\SCI1.1\src\Track.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Track.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\tumbler.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Tutorial.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Tutorial.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\User.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\User.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Verbs.sh" />
