--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -1890,20 +1890,12 @@
     <None Include="Files\TemplateGame\SCI1.1\src\GameControls.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Gauge.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Gauge.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\GlobalPalettes.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\GlobalPalettes.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Grooper.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Grooper.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Helpers.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Helpers.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\IconI.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\IconI.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Inset.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Inset.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\InvI.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\InvI.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\InvItem.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\InvItem.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Jump.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Jump.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Main.sc" />
@@ -1991,8 +1983,6 @@
     <None Include="Files\TemplateGame\SCI1.1\src\TitleScreen.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Track.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\Track.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Tutorial.sc" />
-    <None Include="Files\TemplateGame\SCI1.1\src\Tutorial.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\User.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\User.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\Verbs.sh" />
@@ -3165,6 +3155,12 @@
     <None Include="Help\Legacy\variable_expression.html" />
     <None Include="Help\Legacy\variable_types.html" />
     <None Include="Help\Legacy\variables.html" />
+    <None Include="Files\TemplateGame\SCI1.1\src\IconItem.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\IconItem.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Inventory.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\Inventory.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\InventoryItem.sc" />
+    <None Include="Files\TemplateGame\SCI1.1\src\InventoryItem.sco" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
