- header file dependency tracking

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -866,17 +866,14 @@ BEGIN
     EDITTEXT        IDC_EDITPACKAGE,74,8,68,14,ES_AUTOHSCROLL | ES_NUMBER
 END
 
-IDD_PREFERENCES DIALOGEX 0, 0, 279, 145
+IDD_PREFERENCES DIALOGEX 0, 0, 279, 157
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Preferences"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Ok",IDOK,155,124,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,221,124,50,14
+    DEFPUSHBUTTON   "Ok",IDOK,155,136,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,221,136,50,14
     CONTROL         "Use box for fake ego",IDC_CHECKUSEBOXEGO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,9,83,10
-    EDITTEXT        IDC_FAKEEGOX,97,6,22,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "x",IDC_STATIC,126,10,8,8,SS_CENTERIMAGE
-    EDITTEXT        IDC_FAKEEGOY,133,6,22,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Scale tracing images",IDC_SCALETRACINGIMAGES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,24,95,10
     CONTROL         "Use auto-suggest in vocab dialog",IDC_CHECKAUTOSUGGEST,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,38,119,10
@@ -884,16 +881,24 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,52,137,10
     CONTROL         "Views: dupe new cels",IDC_CHECKDUPENEWCELS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,66,97,10
     CONTROL         "Draw pic polygons as dotted",IDC_CHECKSCI01,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,80,118,10
-    CONTROL         "Enable browse info",IDC_BROWSEINFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,165,21,101,10
-    CONTROL         "Auto code completion",IDC_CODECOMPLETION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,34,89,10
-    CONTROL         "Script navigation",IDC_SCRIPTNAV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,46,89,10
-    CONTROL         "Hover tips",IDC_HOVERTIPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,59,88,10
-    GROUPBOX        "Script editor",IDC_GROUP1,158,7,114,72
     CONTROL         "Play sound when compile fails",IDC_COMPILEERRORSOUND,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,94,116,10
     CONTROL         "Use original SCI aspect ratio",IDC_CHECK_ASPECTRATIO,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,108,106,10
     CONTROL         "Show tabs in script editor",IDC_CHECK_SHOWTABS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,123,97,10
+    EDITTEXT        IDC_FAKEEGOX,97,6,22,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_FAKEEGOY,133,6,22,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "x",IDC_STATIC,126,10,8,8,SS_CENTERIMAGE
+    CONTROL         "Enable browse info",IDC_BROWSEINFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,165,21,101,10
+    CONTROL         "Auto code completion",IDC_CODECOMPLETION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,34,89,10
+    CONTROL         "Script navigation",IDC_SCRIPTNAV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,46,89,10
+    CONTROL         "Hover tips",IDC_HOVERTIPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,59,88,10
+    CONTROL         "Track header file dependencies",IDC_TRACKHEADERFILES,
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,179,69,88,17
+    CONTROL         "Save scripts before run",IDC_SAVESCRIPTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,165,96,88,10
+    CONTROL         "Compile modified scripts before run",IDC_COMPILEDIRTYSCRIPTS,
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,165,110,88,17
+    GROUPBOX        "Script editor",IDC_GROUP1,158,7,114,125
 END
 
 IDD_VPC DIALOGEX 0, 0, 182, 20
@@ -2152,7 +2157,7 @@ BEGIN
         VERTGUIDE, 61
         VERTGUIDE, 97
         TOPMARGIN, 7
-        BOTTOMMARGIN, 138
+        BOTTOMMARGIN, 150
     END
 
     IDD_VPC, DIALOG
