--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -386,6 +386,7 @@
     <ClCompile Include="Src\Util\ColorQuantization.cpp" />
     <ClCompile Include="Src\Util\CustomMessageBox.cpp" />
     <ClCompile Include="Src\Util\DebuggerThread.cpp" />
+    <ClCompile Include="Src\Util\DependencyTracker.cpp" />
     <ClCompile Include="Src\Util\ExtractAll.cpp" />
     <ClCompile Include="Src\Util\ImageUtil.cpp" />
     <ClCompile Include="Src\Util\LipSyncutil.cpp" />
@@ -578,6 +579,7 @@
     <ClInclude Include="Src\Util\ColorQuantization.h" />
     <ClInclude Include="Src\Util\CustomMessageBox.h" />
     <ClInclude Include="Src\Util\DebuggerThread.h" />
+    <ClInclude Include="Src\Util\DependencyTracker.h" />
     <ClInclude Include="Src\Util\ExtractAll.h" />
     <ClInclude Include="Src\Util\ImageUtil.h" />
     <ClInclude Include="Src\Util\LipSyncUtil.h" />
