--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -783,6 +783,9 @@
     <ClCompile Include="Src\Resources\AudioResourceSource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Util\DependencyTracker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SCICompanionLib.h">
@@ -1665,6 +1668,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Dialogs\EditCelDataDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Util\DependencyTracker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
