--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -79,8 +79,8 @@
       <AdditionalLibraryDirectories>$(SolutionDir)Prof-UIS.2.92\Bin_1000\;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>xcopy /S /Y /I /D "$(ProjectDir)Files\*" "$(OutDir)\TestFiles\"</Command>
+      <Message>copy test files</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DeadCodeAnalysis|Win32'">
@@ -98,8 +98,8 @@
       <AdditionalLibraryDirectories>$(SolutionDir)Prof-UIS.2.92\Bin_1000\;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>xcopy /S /Y /I /D "$(ProjectDir)Files\*" "$(OutDir)\TestFiles\"</Command>
+      <Message>copy test files</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -122,8 +122,8 @@
       <Profile>true</Profile>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>xcopy /S /Y /I /D "$(ProjectDir)Files\*" "$(OutDir)\TestFiles\"</Command>
+      <Message>copy test files</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -141,6 +141,7 @@
     <ClCompile Include="TestAllGamesLoad.cpp" />
     <ClCompile Include="TestClassBrowser.cpp" />
     <ClCompile Include="TestCompile.cpp" />
+    <ClCompile Include="TestPicDraw.cpp" />
     <ClCompile Include="TestResource.cpp" />
     <ClCompile Include="TestResourceLoad.cpp" />
   </ItemGroup>
@@ -153,7 +154,90 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Files\Pics\SCI0\pic.006" />
+    <None Include="Files\Pics\SCI0\pic.028" />
+    <None Include="Files\Pics\SCI0\pic.029" />
+    <None Include="Files\Pics\SCI0\pic.500" />
+    <None Include="Files\Pics\SCI1.0\33.p56" />
+    <None Include="Files\Pics\SCI1.0\Early\pic.011" />
+    <None Include="Files\Pics\SCI1.0\Early\pic.030" />
+    <None Include="Files\Pics\SCI1.0\Early\pic.531" />
+    <None Include="Files\Pics\SCI1.0\EGA\pic.570" />
+    <None Include="Files\Pics\SCI1.0\Mid\160.p56" />
+    <None Include="Files\Pics\SCI1.0\Mid\33.p56" />
+    <None Include="Files\Pics\SCI1.0\pic.011" />
+    <None Include="Files\Pics\SCI1.0\pic.030" />
+    <None Include="Files\Pics\SCI1.0\pic.531" />
+    <None Include="Files\Pics\SCI1.1\100.p56" />
+    <None Include="Files\Pics\SCI1.1\320.p56" />
+    <None Include="Files\Pics\SCI1.1\630.p56" />
+    <None Include="Files\Pics\SCI1.1\860.p56" />
+    <None Include="Files\Pics\SCI2\1150.p56" />
+    <None Include="Files\Pics\SCI2\220.p56" />
+    <None Include="Files\Pics\SCI2\901.p56" />
     <None Include="UnitTests.licenseheader" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Files\Pics\SCI0\pic.006-ctl.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.006-pri.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.006-vis.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.028-ctl.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.028-pri.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.028-vis.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.029-ctl.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.029-pri.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.029-vis.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.500-ctl.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.500-pri.bmp" />
+    <Image Include="Files\Pics\SCI0\pic.500-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\33.p56-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\33.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\33.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.011-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.011-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.011-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.030-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.030-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.030-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.531-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.531-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Early\pic.531-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\EGA\pic.570-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\EGA\pic.570-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\EGA\pic.570-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Mid\160.p56-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Mid\160.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Mid\160.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Mid\33.p56-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Mid\33.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\Mid\33.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.011-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.011-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.011-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.030-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.030-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.030-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.531-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.531-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.0\pic.531-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.1\100.p56-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.1\100.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.1\100.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.1\320.p56-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.1\320.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.1\320.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.1\630.p56-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.1\630.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.1\630.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI1.1\860.p56-ctl.bmp" />
+    <Image Include="Files\Pics\SCI1.1\860.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI1.1\860.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI2\1150.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI2\1150.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI2\220.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI2\220.p56-vis.bmp" />
+    <Image Include="Files\Pics\SCI2\901.p56-pri.bmp" />
+    <Image Include="Files\Pics\SCI2\901.p56-vis.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
