- checkin part of basic tutorial

--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -815,6 +815,36 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <Image Include="Docs\source\images\VPCScreens.jpg" />
     <Image Include="Docs\source\images\Waterfall.gif" />
     <Image Include="Docs\source\images\WordFind.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\Box.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\BoxInInventory.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\BoxInRoom.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\BoxMessageGame.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\BoxMessageLook.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\ChooseWhitePri.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\DragPolygon.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\EgoMoved.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\EgoPainting.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\EvilEgo.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\EvilEgoMessages.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\EvilEgoRoom.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\FakeEgoBadPri.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\FakeEgoGoodPri.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\FillPri.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\InvBoxLook.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\MessageTitleScreen.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\OverlayBackground.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\PaintingPolygon.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\PriorityOverlay.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\PriScreen.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\RedBox.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\RedBoxInGame.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\RedBoxMessages.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\RedBoxPlaced.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\RoomBackground.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\ShrinkingBox.jpg" />
+    <Image Include="Docs\source\Tutorial\tutimages\TitleChange.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\TitleChangeImage.png" />
+    <Image Include="Docs\source\Tutorial\tutimages\TitleScreenBackground.jpg" />
     <Image Include="Files\TemplateGame\SCI0.bmp" />
     <Image Include="Files\TemplateGame\SCI0\game.bmp" />
     <Image Include="Files\TemplateGame\SCI1.1.bmp" />
@@ -1408,6 +1438,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Docs\source\sci11_classes.rst" />
     <None Include="Docs\source\sci11_procedures.rst" />
     <None Include="Docs\source\sci11_scripts.rst" />
+    <None Include="Docs\source\sci11_tutorial.rst" />
     <None Include="Docs\source\sci_compiler.rst" />
     <None Include="Docs\source\sci_kernels.rst" />
     <None Include="Docs\source\scripts.rst" />
@@ -1497,6 +1528,16 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Docs\source\talkers.rst" />
     <None Include="Docs\source\texts.rst" />
     <None Include="Docs\source\tips.rst" />
+    <None Include="Docs\source\Tutorial\Actors.rst" />
+    <None Include="Docs\source\Tutorial\AddingObjects.rst" />
+    <None Include="Docs\source\Tutorial\AnimatingProps.rst" />
+    <None Include="Docs\source\Tutorial\Dying.rst" />
+    <None Include="Docs\source\Tutorial\FirstRoom.rst" />
+    <None Include="Docs\source\Tutorial\ManagingInventory.rst" />
+    <None Include="Docs\source\Tutorial\PriorityScreen.rst" />
+    <None Include="Docs\source\Tutorial\RoomBackground.rst" />
+    <None Include="Docs\source\Tutorial\TitleScreen.rst" />
+    <None Include="Docs\source\Tutorial\UseInventory.rst" />
     <None Include="Docs\source\undo.rst" />
     <None Include="Docs\source\views.rst" />
     <None Include="Docs\source\vocabs.rst" />
